<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ModTaskActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/taskTitle_mod" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/taskDate_mod" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/taskTitle_mod"
            app:layout_constraintStart_toStartOf="@+id/taskTitle_mod"
            app:layout_constraintEnd_toEndOf="@+id/taskTitle_mod"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/taskTime_mod"
            app:layout_constraintTop_toBottomOf="@+id/taskDate_mod" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/taskDate_mod"
            app:layout_constraintStart_toStartOf="@+id/taskDate_mod"/>
    <TextView
            android:text="@string/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/taskTime_mod" app:layout_constraintStart_toStartOf="@+id/taskTime_mod"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:id="@+id/rg_priority"
            app:layout_constraintStart_toStartOf="@+id/textView">
        <RadioButton
                android:text="@string/immediately"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rb_Immediately" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/asap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rb_ASAP" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/soon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rb_Soon" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/anytime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rb_AnyTime" android:layout_weight="1"/>
    </RadioGroup>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/taskDetail_mod"
            app:layout_constraintTop_toBottomOf="@+id/rg_priority" app:layout_constraintStart_toStartOf="@+id/rg_priority"
            app:layout_constraintEnd_toEndOf="@+id/taskTime_mod" app:layout_constraintBottom_toTopOf="@+id/modifyButton_mod"/>
    <Button
            android:text="@string/modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modifyButton_mod"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="@+id/taskDetail_mod"
            app:layout_constraintStart_toStartOf="@+id/taskDetail_mod"/>
    <Button
            android:text="@string/cancelButton_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelButton_mod"
            app:layout_constraintTop_toTopOf="@+id/modifyButton_mod"
            app:layout_constraintStart_toStartOf="@+id/taskDetail_mod"/>
    <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteButton_mod"
            app:layout_constraintTop_toTopOf="@+id/modifyButton_mod"
            app:layout_constraintEnd_toEndOf="@+id/taskDetail_mod"/>
</android.support.constraint.ConstraintLayout>